# shairport-metadata-reader

./: .gitignore  CMakeLists.txt  Notes.md
.github/workflows/: build.yml
docs/: DMAP-DAAP-codes.md
examples/: README.md  math_test.cpp  shairport-sync-metadata-reader.c
resources/: example-input-connect.txt  example-input-pause.txt
src/: Base64Encoder.cpp  Base64Encoder.hpp  CMakeLists.txt  LiteralConverter.cpp  LiteralConverter.hpp  MetaData.cpp  MetaData.hpp  MetaDataReader.cpp  MetaDataReader.hpp  NamedPipe.cpp  NamedPipe.hpp  RawImageFactory.cpp  RawImageFactory.hpp  RawJPEG.cpp  RawJPEG.hpp  RawJPEGFactory.cpp  RawJPEGFactory.hpp  RawJPG.cpp  RawJPG.hpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
